[metadata]
name = tfire
version = 0.2.0
description = Fire simulation in the terminal using python and curses
long_description = file: README.md
long_description_content_type = text/markdown
url =
author = Chad Larson
author_email = techchad2@gmail.com
license = MIT
license_file = LICENSE

[options]
py_modules = tfire
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    tfire = tfire:main

[bdist_wheel]
universal = True